@@ -1,2 +1,3 @@
 [MESSAGES CONTROL]
 disable=C0103,R0903
+ignored-modules=libvirt,lxml,nbd,lz4.frame,tqdm
