@@ -2,7 +2,7 @@
 with-python2 = False
 with-python3 = True
 Build-Depends = python3-libnbd, python3-libvirt
-Depends3 = python3-libvirt, python3-libnbd, python3-tqdm, python3-lz4, nbdkit, nbdkit-plugin-python, libnbd-bin
+Depends3 = python3-libvirt, python3-lxml, python3-libnbd, python3-tqdm, python3-lz4, nbdkit, nbdkit-plugin-python, libnbd-bin
 Package = virtnbdbackup
 Package3 = virtnbdbackup
 Section = admin
